tests/paczka1/fuzzy1/58243487.err
Error in line 11: Tf6hIRA1 S251 63,8
Error in line 22: jjhCZ A406 70,6
Error in line 30: jjhCZ S479 18,6
